<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>lq.snow</groupId>
    <artifactId>BlockRacing</artifactId>
    <version>3.5</version>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
    </properties>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.21.11-R0.2-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.kangarko</groupId>
            <artifactId>Foundation</artifactId>
            <version>6.9.23</version>
            <exclusions>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>AuthMe</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>BentoBox</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>CitizensAPI</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>CMIAPI</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>DiscordSRV</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>EssentialsX</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>Factions</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>FactionsUUID</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>MassiveCore</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>mcMMO</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>MultiverseCore</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>MythicMobs</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>NuVotifier</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>PlaceholderAPI</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>ProtocolLib</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>Residence</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>SimpleClans</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>Towny</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>TownyChat</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>Vault</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>WorldEdit</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.mineacademy.plugin</groupId>
                    <artifactId>WorldGuard</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.42</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.1.0</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>

                <!-- Change version to the latest one from
         https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-shade-plugin -->
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <artifactSet>
                        <includes>
                            <!-- Important: This will ensure only Foundation is shaded to your jar.
                            If you have
                     other dependencies that should be compiled, duplicate this line for each. 
                     
                     ONLY ADD THE LIBRARIES HERE YOU WANT TO BE INCLUDED IN YOUR PLUGIN.JAR
                     -->
                            <include>com.github.kangarko:Foundation*</include>
                        </includes>
                    </artifactSet>
                    <relocations>
                        <!-- This moves Foundation into your own package in "lib" subpackage to
                        prevent interference. -->
                        <relocation>
                            <pattern>org.mineacademy.fo</pattern>
                            <!--shadedPattern>your.plugin.main.package.lib</shadedPattern-->
                        </relocation>
                    </relocations>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
